# Stock_Portfolio_Simulation

./: .dockerignore  .gitignore  CODING_AGENT_SPEC.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
portfolio_monte_carlo/: __init__.py  app.py  dash_app.py
portfolio_monte_carlo/assets/: custom.css
portfolio_monte_carlo/charts/: __init__.py  plots.py
portfolio_monte_carlo/core/: __init__.py  contributions.py  models.py  portfolio.py  returns.py  risk.py  scenario.py  simulation.py
portfolio_monte_carlo/data/: __init__.py  cache.py  providers.py  validation.py
tests/: test_returns.py  test_risk.py  test_simulation.py
